# opensky_api.rs

./: .env-example  .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: rust.yml
examples/: get-flights.rs  get-states.rs  get-tracks.rs
src/: bounding_box.rs  errors.rs  flights.rs  lib.rs  states.rs  tracks.rs
tests/: api.rs
