[package]
name = "opensky_api"
version = "0.1.4"
authors = ["Luke Newcomb <newcomb.luke@protonmail.com>"]
description = "A simple Rust wrapper library around the OpenSky Network API"
license = "MIT"
edition = "2021"
repository = "https://github.com/newcomb-luke/opensky_api.rs"

[dependencies]
reqwest = "0.11"
thiserror = "1.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"

[dev-dependencies]
tokio = { version = "1.12", features = ["full"] }
